--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<artifactId>rice-lb-extensions</artifactId>
 	<packaging>jar</packaging>
 	<name>rice-lb-extensions</name>
-	<version>1.0.0</version>
+	<version>0.0.1</version>
 	<description>Liquibase Extensions specific to Kuali Rice</description>
 	<url>http://r351574nc3.github.com/lbcopy/</url>
 	<organization>
@@ -208,5 +208,23 @@
         <artifactId>liquibase-core</artifactId>
         <version>2.0.2</version>
       </dependency>
+      <dependency>
+        <groupId>com.rsmart.kuali.tools.liquibase</groupId>
+        <artifactId>rsmart-lb-extensions</artifactId>
+        <version>1.0.0</version>
+      </dependency>
     </dependencies>
+
+    <scm>
+      <connection>scm:git:git://github.com/r351574nc3/rice-lb-ext.git</connection>
+      <developerConnection>scm:git:git://github.com/r351574nc3/rice-lb-ext.git</developerConnection>
+      <url>http://www.github.com/r351574nc3/rice-lb-ext</url>
+    </scm>
+    
+    <distributionManagement>
+      <site>
+        <id>github-project-site</id>
+        <url>gitsite:git@github.com/r351574nc3/rice-lb-ext</url>
+      </site>
+    </distributionManagement>
 </project>
