--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	
-	<!-- 
-		The default build of this project targets a servlet 2.4 web container.  Profiles are provided for
-		targeting different environments.
-	 -->
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.rsmart.kuali.tools.liquibase</groupId>
+    <parent>
+        <groupId>org.kuali.pom</groupId>
+        <artifactId>kuali-maven</artifactId>
+        <version>1.4.6</version>
+    </parent>
+	<groupId>org.kualigan.liquibase</groupId>
 	<artifactId>rice-lb-extensions</artifactId>
 	<packaging>jar</packaging>
 	<name>rice-lb-extensions</name>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<description>Liquibase Extensions specific to Kuali Rice</description>
 	<url>http://r351574nc3.github.com/lbcopy/</url>
 	<organization>
@@ -31,7 +31,7 @@
       <developer>
         <id>leo</id>
         <name>Leo Przybylski</name>
-        <email>leo@rsmart.com</email>
+        <email>r351574nc3@gmail.com</email>
         <url>http://kualigan.blogspot.com</url>
         <organization>rsmart</organization>
         <organizationUrl>http://www.rsmart.com</organizationUrl>
@@ -209,19 +209,27 @@
         <version>2.0.2</version>
       </dependency>
       <dependency>
-        <groupId>com.rsmart.kuali.tools.liquibase</groupId>
-        <artifactId>rsmart-lb-extensions</artifactId>
+        <groupId>org.kualigan.liquibase</groupId>
+        <artifactId>kualigan-lb-extensions</artifactId>
         <version>1.0.0</version>
       </dependency>
     </dependencies>
 
-    <scm>
-      <connection>scm:git:git://github.com/r351574nc3/rice-lb-ext.git</connection>
-      <developerConnection>scm:git:git://github.com/r351574nc3/rice-lb-ext.git</developerConnection>
-      <url>http://www.github.com/r351574nc3/rice-lb-ext</url>
-    </scm>
-    
-    <distributionManagement>
+  <scm>
+    <connection>scm:git:git://github.com/r351574nc3/rice-lb-ext.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/r351574nc3/rice-lb-ext.git</developerConnection>
+    <url>https://github.com/r351574nc3/rice-lb-ext</url>
+  </scm>
+  
+  <distributionManagement>
+    <repository>
+      <id>sonatype-nexus-staging</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+    </repository>
+    <snapshotRepository>
+      <id>sonatype-nexus-snapshots</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
       <site>
         <id>github-project-site</id>
         <url>gitsite:git@github.com/r351574nc3/rice-lb-ext</url>
