--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.kuali.pom</groupId>
@@ -10,7 +11,7 @@
 	<artifactId>rice-lb-extensions</artifactId>
 	<packaging>jar</packaging>
 	<name>rice-lb-extensions</name>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<description>Liquibase Extensions specific to Kuali Rice</description>
 	<url>http://r351574nc3.github.com/lbcopy/</url>
 	<organization>
@@ -213,6 +214,36 @@
         <version>1.0.0</version>
       </dependency>
     </dependencies>
+    <profiles>
+        <profile>
+            <id>kualigan-release</id>
+            <properties>
+                <kuali.release.profiles>kualigan-release</kuali.release.profiles>
+            </properties>
+            <build>
+                <plugins>
+                  <plugin>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <configuration>
+                      <updateReleaseInfo>true</updateReleaseInfo>
+                    </configuration>
+                  </plugin>
+                  <plugin>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <executions>
+                      <execution>
+                        <id>gpg</id>
+                        <phase>${kuali.gpg.phase}</phase>
+                        <goals>
+                          <goal>sign</goal>
+                        </goals>
+                      </execution>
+                    </executions>
+                  </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
   <scm>
     <connection>scm:git:git://github.com/r351574nc3/rice-lb-ext.git</connection>
