--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
     <parent>
         <groupId>org.kuali.pom</groupId>
         <artifactId>kuali-maven</artifactId>
-        <version>1.4.6</version>
+        <version>4.3.5</version>
     </parent>
 	<groupId>org.kualigan.liquibase</groupId>
 	<artifactId>rice-lb-extensions</artifactId>
 	<packaging>jar</packaging>
 	<name>rice-lb-extensions</name>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<description>Liquibase Extensions specific to Kuali Rice</description>
 	<url>http://r351574nc3.github.com/lbcopy/</url>
 	<organization>
@@ -260,6 +260,7 @@
     <connection>scm:git:git://github.com/r351574nc3/rice-lb-ext.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/r351574nc3/rice-lb-ext.git</developerConnection>
     <url>https://github.com/r351574nc3/rice-lb-ext</url>
+    <tag>HEAD</tag>
   </scm>
   
   <distributionManagement>
