--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>rice-lb-extensions</artifactId>
   <packaging>jar</packaging>
   <name>rice-lb-extensions</name>
-  <version>2.0.1</version>
+  <version>2.0.2-SNAPSHOT</version>
   <description>Liquibase Extensions specific to Kuali Rice</description>
   <url>http://r351574nc3.github.com/lbcopy/</url>
   <organization>
@@ -485,7 +485,7 @@
     <connection>scm:git:git://github.com/r351574nc3/rice-lb-ext.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/r351574nc3/rice-lb-ext.git</developerConnection>
     <url>https://github.com/r351574nc3/rice-lb-ext</url>
-    <tag>rice-lb-extensions-2.0.1</tag>
+    <tag>rice-lb-extensions-2.0.0</tag>
   </scm>
 
   <distributionManagement>
