--- a/pom.xml
+++ b/pom.xml
@@ -440,6 +440,13 @@
                 </goals>
               </execution>
             </executions>
+	    <dependencies>
+              <dependency>
+                <groupId>org.apache.maven.doxia</groupId>
+                <artifactId>doxia-module-markdown</artifactId>
+                <version>1.3</version>
+              </dependency>
+	    </dependencies>
           </plugin>
           <plugin>
             <artifactId>maven-jar-plugin</artifactId>
