Implement initial workflow ingestion change

--- a/pom.xml
+++ b/pom.xml
@@ -495,18 +495,14 @@
     <tag>rice-lb-extensions-2.0.0</tag>
   </scm>
 
-  <distributionManagement>
-    <repository>
-      <id>sonatype-nexus-staging</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-    </repository>
-    <snapshotRepository>
-      <id>sonatype-nexus-snapshots</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-    <site>
-      <id>github-project-site</id>
-      <url>gitsite:git@github.com/r351574nc3/rice-lb-ext</url>
-    </site>
-  </distributionManagement>
+    <distributionManagement>
+        <repository>
+            <id>nexus-releases</id>
+            <url>http://kualidev.nwu.ac.za:8082/nexus/content/repositories/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>nexus-snapshots</id>
+            <url>http://kualidev.nwu.ac.za:8082/nexus/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
