--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>rice-lb-extensions</artifactId>
   <packaging>jar</packaging>
   <name>rice-lb-extensions</name>
-  <version>2.0.2</version>
+  <version>2.0.3-SNAPSHOT</version>
   <description>Liquibase Extensions specific to Kuali Rice</description>
   <url>http://r351574nc3.github.com/lbcopy/</url>
   <organization>
